--- a/app/views/api/v1/ideas/index.html.haml
+++ b/app/views/api/v1/ideas/index.html.haml
@@ -12,7 +12,7 @@
   .col-md-8.col-md-offset-2
     .well
       %table.table.table-hover.ideas-table
-        %tr#headings.text-center
-          %th.text-center Title
-          %th.text-center Body
-          %th.text-center Quality
+        %tr#headings
+          %th Title
+          %th Body
+          %th Quality
