add items#destroy action

--- a/app/views/api/v1/ideas/index.html.haml
+++ b/app/views/api/v1/ideas/index.html.haml
@@ -11,7 +11,7 @@
 .row
   .col-md-8.col-md-offset-2
     .well
-      %table.table.table-hover.ideas-table
+      %table.table.table-hover#ideas-table
         %tr#headings
           %th Title
           %th Body
