--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,8 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
-    = yield
+    .container-fluid
+      .row
+        .col-md-12
+          .flash
+          = yield
