--- a/app/views/api/v1/ideas/index.html.haml
+++ b/app/views/api/v1/ideas/index.html.haml
@@ -1,6 +1,3 @@
-%br
-%br
-%br
 .row
   .col-md-8.col-md-offset-2
     .well
@@ -16,3 +13,4 @@
           %th Title
           %th Body
           %th Quality
+          %th Actions
