add css for column widths

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,20 @@
 @import "bootstrap";
 
 @import "rails_bootstrap_forms";
+
+
+.thumbs-up {
+  padding-left: 5px;
+  padding-left: 5px;
+}
+
+.thumbs-down {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+ .table tr > *:nth-child(1) { width:15%; }
+ .table tr > *:nth-child(2) { width:60%; }
+ .table tr > *:nth-child(3) { width:15%; }
+ .table tr > *:nth-child(4) { width:5%; }
+ .table tr > *:nth-child(5) { width:5%; }
