--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,11 +19,14 @@
 @import "rails_bootstrap_forms";
 
 
+textarea.noscrollbars {
+  overflow: hidden;
+}
 
- .table tr > *:nth-child(1) { width:10%; }
- .table tr > *:nth-child(2) { width:60%; }
- .table tr > *:nth-child(3) { width:10%; }
- .table tr > *:nth-child(4) { width:5%; }
- .table tr > *:nth-child(5) { width:5%; }
+.table tr > *:nth-child(1) { width:10%; }
+.table tr > *:nth-child(2) { width:60%; }
+.table tr > *:nth-child(3) { width:10%; }
+.table tr > *:nth-child(4) { width:5%; }
+.table tr > *:nth-child(5) { width:5%; }
 //  .table tr > *:nth-child(5) { width:10%; }
 
