add background color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,3 +30,6 @@ textarea.noscrollbars {
 .table tr > *:nth-child(5) { width:5%; }
 //  .table tr > *:nth-child(5) { width:10%; }
 
+body {
+  background-color: lightblue;
+}
